# smart-line-automation-suite

./: .env.example  .gitignore  Dockerfile  FINAL_STATUS.md  HEARTBEAT.md  ITERATION_GOALS.md  Makefile  PROJECT_SUMMARY.txt  README.md  README.md_SPACE  README_backup.md  alembic.ini  deployment_instructions.md  docker-compose.yml  pyproject.toml  test_import.py
.github/workflows/: ci.yml  docker.yml
alembic/versions/: 001_initial.py  002_add_scraping.py  003_add_ai.py  004_add_ai_tables.py  005_add_api_keys_webhooks.py
app/: main.py
app/Models/: __init__.py  ai_conversation.py  api_key.py  base.py  line_user.py  scraping_job.py  scraping_result.py  user.py  webhook.py
app/api/v1/: router.py
app/api/v1/endpoints/: agent.py  ai.py  analytics.py  api_key.py  api_key_auth.py  dashboard.py  discord.py  files.py  line.py  monitoring.py  scraping.py  system.py  telegram.py  webhook.py  whatsapp.py  widget.html  widget.py
app/api/v1/endpoints/auth/: __init__.py
app/core/: config.py  database.py  security.py
app/middleware/: __init__.py  security.py
app/monitoring/: __init__.py  metrics.py
app/schemas/: __init__.py  ai.py  api_key.py  line_user.py  scraping.py  user.py  webhook.py
app/services/: ai_service.py  api_key_service.py  dashboard_service.py  line_service.py  scraping_service.py  telegram_service.py  unified_messaging.py  webhook_service.py
app/tasks/: ai_tasks.py  celery_app.py  notification_tasks.py  scraping_tasks.py
app/utils/: circuit_breaker.py  decorators.py  logging_utils.py  validators.py
app/workflow/: __init__.py  api.py  engine.py
deploy/cloud/: render.yaml
deploy/helm/demo-bot/: Chart.yaml  values.yaml
deploy/k8s/: config.yaml  deployment.yaml  pvc.yaml  service.yaml
deploy/terraform/: main.tf  variables.tf
docs/: api.md  architecture.md  changelog.md  deployment.md  development.md  enterprise_workflow.md
requirements/: base.txt  dev.txt
scraper/: items.py  settings.py
scraper/middlewares/: retry_middleware.py
scraper/pipelines/: data_pipeline.py
scraper/spiders/: base.py
scripts/: backup_db.py  create_superuser.py  generate_test_data.py  init_db.py  reset_db.py  run_workflow.py  scrape_sample.py  seed_data.py
tests/: conftest.py
tests/integration/: test_ai.py  test_api.py  test_auth.py
tests/unit/: test_config.py  test_core.py  test_dashboard_service.py  test_line_service.py  test_monitoring.py  test_scraping_service.py  test_security.py  test_services.py  test_tasks.py
