[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "demo_project"
description = "智慧型 LINE Bot + 後台 Dashboard + 自動化爬蟲管線 Demo"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Smile Dangerous", email = "smile@example.com"}
]
keywords = ["fastapi", "line-bot", "celery", "langchain", "scraping", "dashboard"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

# Dependencies
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.12.0",
    "psycopg2-binary>=2.9.0",
    "redis>=4.5.0",
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.6",
    "celery[redis]>=5.3.0",
    "langchain>=0.1.0",
    "langchain-openai>=0.1.0",
    "langgraph>=0.0.20",
    "botasaurus>=1.5.0",
    "python-dotenv>=1.0.0",
    "email-validator>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.25.0",
    "ruff>=0.1.0",
    "mypy>=1.0.0",
    "pre-commit>=3.5.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/smile-dangerous/demo_project"
Documentation = "https://github.com/smile-dangerous/demo_project#readme"
Repository = "https://github.com/smile-dangerous/demo_project"
Issues = "https://github.com/smile-dangerous/demo_project/issues"

[tool.ruff]
line-length = 88
target-version = "py310"
select = ["E", "F", "W", "C90"]
ignore = []

[tool.ruff.format]
quote-style = "double"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = ["-ra", "-q", "--strict-markers", "--strict-config", "--tb=short"]
markers = [
    "unit: marks tests as unit tests",
    "integration: marks tests as integration tests",
]