[project]
name = "smart-line-automation-suite"
version = "0.1.0"
description = "Smart LINE Bot + Dashboard + Scraper Pipeline with AI Service"
authors = [
    {name = "Smile Dangerous", email = "smile@example.com"}
]
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.27.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "celery>=5.4.0",
    "redis>=5.0.0",
    "botasaurus>=1.0.0",
    "langgraph>=0.0.20",
    "langchain>=0.1.0",
    "python-multipart>=0.0.6",
    "email-validator>=2.0.0",
    "prometheus-client>=0.19.0",
    "structlog>=24.1.0",
]
[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "black>=24.0.0",
    "ruff>=0.4.0",
    "mypy>=1.0.0",
]
test = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
]
scraper = [
    "botasaurus>=1.0.0",
]

[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"